--- a/my-styles.css
+++ b/my-styles.css
@@ -1,7 +1,7 @@
 body {
 	text-align: center;
 	margin-top: 50px;
-	body {background-color:powderblue;}	
+	background-color:powderblue;	
 }
 
 button,
